--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -68,5 +68,8 @@ develop:
     produce man page from erb-template
   diff: |
     compare produced man page with usage
-  selftest: |
-    perform selftest
+  selftest, st: |
+    perform selftest with special regard to the environment
+  unittest, ut: |
+    unittest for features, that cannot easily be tested within the
+    main program
