--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -54,18 +54,41 @@
   - strong voice, size, and personality.
   - Thornton has been praised for subverting traditional
   - roles of African-American women.
-- name: Big Walter Horton
-  bio: []
-  songs: []
-  notes: []
+  - Inducted into the Blues Hall of Fame in 1982
+- name: '"Big" Walter Horton'
+  bio:
+  - April 6, 1921 – December 8, 1981
+  - American blues harmonica player
+  songs:
+  - Easy
+  - Walking By Myself
+  - Walter's Boogie
+  notes:
+  - Robert Palmer named him as
+  - '"one of the three great harmonica soloists of modern blues"'
+  - with the two others being cited as Little Walter and
+  - Sonny Boy Williamson II.
+  - Known for his unique tongue-blocking techniques and tone.
+  - Toured extensively in places such as Germany, Finland, and England
+  - Accompanied John Lee Hooker in the 1980 film The Blues Brothers
 - name: Charlie Mccoy
   bio: []
   songs: []
   notes: []
 - name: Charlie Musselwhite
-  bio: []
-  songs: []
-  notes: []
+  bio:
+  - January 31, 1944 -
+  - American blues harmonica player and bandleader
+  songs:
+  - Baby Will You Please Help Me
+  - If I Should Have Bad Luck 
+  - Christo Redemptor
+  notes:
+  - Journey through the blues from his birth in Mississippi
+  - to Memphis, Chicago and California.
+  - Fifty years of nonstop touring, released over 20 albums
+  - Inducted into the Blues Hall of Fame in 2010
+  - Reportedly the inspiration for Elwood Blues
 - name: Gary Primich
   bio: []
   songs: []
