support user supplied pictures

--- a/config/config.ini
+++ b/config/config.ini
@@ -78,6 +78,15 @@
 # Please note, that there is no section [report], because this mode 
 # simply takes all its values from [licks]
 
+[print]
+  # Viewer for pictures (e.g. of players)
+  # make sure this program is installed and found in PATH. Possible
+  # values are:
+  # - chafa (within terminal); in Addition wget is needed too
+  # - feh (separate grafical window)
+  # - none
+  viewer = none
+  
 [general]
 
   # Normally the way you write your scale (with flats or with sharps),
@@ -103,3 +112,4 @@
   
   # The sample rate used to drive aubiopitch and sox
   sample_rate = 48000
+
