--- a/resources/opt2desc.yaml
+++ b/resources/opt2desc.yaml
@@ -196,6 +196,13 @@ time_slice:
     termination, that will allow to judge the situation.
   - SHORT_MEDIUM_LONG
 
+viewer:
+  - |
+    Viewer for images (e.g. of players); can be 'none' or one of the
+    external programs 'feh' or 'chafa' which need to be installed
+    first.
+  - NONE_FEH_CHAFA
+  
 terse:
 
   - |
