scale playr images

--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -43,7 +43,7 @@
   - '"Annie Raines has some of the biggest tone out there, period"'
   - (quote by Ronnie Shellist)
   - Forms a world class blues-duo with Paul Rishell
-  url: []
+  url: https://en.wikipedia.org/wiki/Annie_Raines
 - name: Big Mama Thornton
   bio:
   - December 11, 1926 – July 25, 1984
