--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -12,7 +12,7 @@
   - Joined Muddy Waters' band in 1948
   - 14 top-ten hits on the Billboard R&B charts between 1952 and 1958
   - Pioneered amplified harmonica
-  url: https://en.wikipedia.org/wiki/Little_Walter
+  source: https://en.wikipedia.org/wiki/Little_Walter
 - name: Sonny Boy Williamson II
   bio:
   - December 5, 1912 - May 24, 1965
@@ -28,7 +28,7 @@
   - Toured Europe several times in the early 1960s
   - Married Howlin' Wolf's half-sister Mae
   - Showed Wolf how to play harmonica
-  url: https://en.wikipedia.org/wiki/Sonny_Boy_Williamson_II
+  source: https://en.wikipedia.org/wiki/Sonny_Boy_Williamson_II
 - name: Annie Raines
   bio:
   - July 3, 1969 -
@@ -43,7 +43,7 @@
   - '"Annie Raines has some of the biggest tone out there, period"'
   - (quote by Ronnie Shellist)
   - Forms a world class blues-duo with Paul Rishell
-  url: https://en.wikipedia.org/wiki/Annie_Raines
+  source: https://en.wikipedia.org/wiki/Annie_Raines
 - name: Big Mama Thornton
   bio:
   - December 11, 1926 – July 25, 1984
@@ -60,7 +60,7 @@
   - strong voice, size, and personality.
   - Thornton has been praised for subverting traditional
   - roles of African-American women.
-  url: https://en.wikipedia.org/wiki/Big_Mama_Thornton
+  source: https://en.wikipedia.org/wiki/Big_Mama_Thornton
 - name: '"Big" Walter Horton'
   bio:
   - April 6, 1921 – December 8, 1981
@@ -77,7 +77,7 @@
   - Known for his unique tongue-blocking techniques and tone.
   - Toured extensively in places such as Germany, Finland, and England
   - Accompanied John Lee Hooker in the 1980 film The Blues Brothers
-  url: https://en.wikipedia.org/wiki/Big_Walter_Horton
+  source: https://en.wikipedia.org/wiki/Big_Walter_Horton
 - name: Charlie Mccoy
   bio:
   - March 28, 1941 -
@@ -91,7 +91,7 @@
   - His playing is heard on recordings by Elvis Presley, Bob Dylan,
   - Johnny Cash, Chet Atkins, Waylon Jennings, Roy Orbison,
   - Leon Russell, and Loretta Lynn
-  url: https://en.wikipedia.org/wiki/Charlie_McCoy
+  source: https://en.wikipedia.org/wiki/Charlie_McCoy
 - name: Charlie Musselwhite
   bio:
   - January 31, 1944 -
@@ -106,7 +106,7 @@
   - to Memphis, Chicago and California.
   - Fifty years of nonstop touring, released over 20 albums
   - Reportedly the inspiration for Elwood Blues
-  url: https://en.wikipedia.org/wiki/Charlie_Musselwhite
+  source: https://en.wikipedia.org/wiki/Charlie_Musselwhite
 - name: Gary Primich
   bio:
   - April 20, 1958 – September 23, 2007
@@ -118,7 +118,7 @@
   notes:
   - Released an instructional double CD, Blues Harmonica:
   - The Blues And Beyond
-  url: https://en.wikipedia.org/wiki/Gary_Primich
+  source: https://en.wikipedia.org/wiki/Gary_Primich
 - name: George 'Harmonica' Smith
   bio:
   - April 22, 1924 – October 2, 1983
@@ -129,12 +129,12 @@
   notes:
   - Backing both Muddy Waters and Big Mama Thornton
   - Influenced William Clarke and Rod Piazza
-  url: []
+  source: []
 - name: Howard Levy
   bio: []
   songs: []
   notes: []
-  url: []
+  source: []
 - name: Howlin' Wolf
   bio:
   - June 10, 1910 – January 10, 1976
@@ -150,17 +150,17 @@
   notes:
   - Regarded as one of the most influential blues musicians of all time
   - Known for his booming voice and imposing physical presence
-  url: []
+  source: []
 - name: James Cotton
   bio: []
   songs: []
   notes: []
-  url: []
+  source: []
 - name: James Harman
   bio: []
   songs: []
   notes: []
-  url: []
+  source: []
 - name: Jason Ricci
   bio:
   - February 3, 1974 -
@@ -174,7 +174,7 @@
   - 'Won the Blues Music Award for "Best Harmonica Player" in 2010'
   - '"I am convinced he ... is one of the best harmonica players"'
   - '"of his generation." (quote by Adam Gussow)'
-  url: []
+  source: []
 - name: Jimmy Reed
   bio:
   - September 6, 1925 – August 29, 1976
@@ -192,12 +192,12 @@
   - '"Perhaps the most influential bluesman of all,"'
   - due to his easily accessible style.
   - (quote by Cub Koda)
-  url: []
+  source: []
 - name: Junior Wells
   bio: []
   songs: []
   notes: []
-  url: []
+  source: []
 - name: Kim Wilson
   bio:
   - January 6, 1951 -
@@ -212,22 +212,22 @@
   - In 2016 he won a Blues Music Award in the
   - category Instrumentalist - Harmonica.
   - 'Founder of the "The Fabulous Thunderbirds"'
-  url: []
+  source: []
 - name: Lee Oskar
   bio: []
   songs: []
   notes: []
-  url: []
+  source: []
 - name: Mark Hummel
   bio: []
   songs: []
   notes: []
-  url: []
+  source: []
 - name: Paul Butterfield
   bio: []
   songs: []
   notes: []
-  url: []
+  source: []
 - name: Paul Delay
   bio:
   - January 31, 1952 – March 7, 2007
@@ -243,7 +243,7 @@
   - (quote by Rick Estrin)
   - His work on the chromatic harp is considered
   - by many to be unrivaled.
-  url: []
+  source: []
 - name: Phil Wiggins
   bio:
   - May 8, 1954 -
@@ -257,7 +257,7 @@
   - South and Central America, and the Soviet Union.
   - Known for his "blistering harmonica solos"
   - National Heritage Fellow
-  url: []
+  source: []
 - name: Rick Estrin
   bio:
   - October 5, 1949 -
@@ -276,12 +276,12 @@
   - Played around the world with his band Rick Estrin & The Nightcats.
   - Muddy Waters tried to hire Estrin as a sideman but Estrin did
   - not receive the phone call.
-  url: []
+  source: []
 - name: Rod Piazza
   bio: []
   songs: []
   notes: []
-  url: []
+  source: []
 - name: Son of Dave
   bio:
   - January 4, 1967 -
@@ -298,12 +298,12 @@
   - Moved to London in 1998
   - Combines Beat-Boxing with harmonica
   - '"A one-man party, a true Maverick Bluesman"'
-  url: []
+  source: []
 - name: Sonny Boy Williamson
   bio: []
   songs: []
   notes: []
-  url: []
+  source: []
 - name: Sonny Terry
   bio:
   - October 24, 1911 – March 11, 1986
@@ -320,7 +320,7 @@
   - and occasionally imitations of trains and fox hunts
   - Recorded numerous songs with Brownie McGhee
   - Went blind at the age of 16
-  url: []
+  source: []
 - name: William Clarke
   bio:
   - March 29, 1951 – November 2, 1996
@@ -335,10 +335,10 @@
   - '"a bluesman with as much soul and swing in his music"'
   - (quote by Dick Shurman)
   - Played regularly with George 'Harmonica' Smith
-  url: []
-  url: []
+  source: []
+  source: []
 - name: John Popper
   bio: []
   songs: []
   notes: []
-  url: []
+  source: []
